Fixed the word wrapping in textarea fields

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -52,8 +52,7 @@
             padding: 12px;
             border-radius: 4px;
             border: none;
-            word-wrap: break-word;
-            word-break: break-all;
+            overflow-wrap: break-word;
             resize: none;
         }
 
